styles/app.css
/* ... */
form[name="app-settings"],
#a-propos > .section-contenu {
  box-sizing: border-box;
  width: 100%;
  max-width: 65ch;
}

#parametres > .section-contenu,
#a-propos > .section-contenu {
  padding-inline: 16px;
}

h2:not(:first-child) {
  margin-top: 16px;
}

.un-parametre {
  display: grid;
  grid-template-columns: auto 1fr;
  grid-template-rows: auto;
  column-gap: 16px;
  min-height: 32px;
  padding-block: 8px;
  text-align: left;
  align-items: center;
  container-type: inline-size;
}

.un-parametre.with-description {
  grid-template-rows: auto auto;
}

.un-parametre.theme > .param {
  grid-template-columns: auto auto auto;
  gap: 8px;
}

.un-parametre + .un-parametre {
  margin-top: 0;
  border-top: 1px solid rgb(var(--outline-variant));
}

.param-nom,
.param-description {
  max-width: 40ch;
}

.param-nom {
  display: block;
  grid-row: 1;
  grid-column: 1;
  color: rgb(var(--on-surface));
}

.param-description {
  grid-row: 2;
  grid-column: 1;
  color: rgb(var(--on-surface-variant));
}

.param {
  display: grid;
  align-self: center;
  justify-content: end;
  min-width: 150px;
}

.un-parametre.long .param {
  align-self: start;
}

.un-parametre > label,
.un-parametre > input,
.un-parametre > input-switch,
.un-parametre > .param {
  grid-row: 1 / -1;
  grid-column: 2;
}

[data-action="check-update"] {
  margin: 0;
}

#parametres:not([data-online-backup]) .if-backup,
#parametres:not([data-online-sharing]) .if-sharing {
  display: none;
}

#parametres[data-online-backup] .no-backup,
#parametres[data-online-sharing] .no-sharing {
  display: none;
}

.info-backup {
  display: none;
  font-size: .8rem;
  color: var(--bg-color);
  background-color: var(--color);
  padding: .2em .5em;
  margin-left: .2em;
  border-radius: 20px;
}

.info-backup.success {
  --color: var(--success-color);
}

.info-backup.failure {
  --color: var(--failure-color);
}

[data-sprites-progress]:empty {
  display: none;
}

[data-sprites-progress]:not(:empty)::before {
  content: '(';
}

[data-sprites-progress]:not(:empty)::after {
  content: ')';
}

#parametres[data-online-backup][data-last-sync=success] .success,
#parametres[data-online-backup][data-last-sync=failure] .failure {
  display: inline;
}

label[for="pick-import-file"],
#pick-import-file {
  width: .1px;
	height: .1px;
	opacity: 0;
	overflow: hidden;
	position: absolute;
	z-index: -1;
}

.account-warning {
  border: 1px solid var(--success-color);
  border-radius: var(--border-radius);
  padding: 8px;
  grid-template-columns: auto;
  box-sizing: border-box;
}

.un-parametre.theme input[type="radio"] + label {
  margin: 0;
}

input-slider[name="theme-hue"] {
  --block-size: var(--tap-safe-size);
  --inline-size: 80cqw;
  --thumb-width: 14px;
}

input-slider[name="theme-hue"]::part(slider-track) {
  --couleurs: white 0%, black 100%;
  background: var(--gradient, transparent);
  width: 100%;
  height: 100%;
  border: none;
  --border: none;
  outline: var(--border, none);
  border-radius: var(--border-radius);
}

input-slider[name="theme-hue"]::part(slider-thumb) {
  background: transparent;
  border: none;
  border-radius: var(--border-radius);
  box-shadow: inset 0 0 0 2px rgb(var(--on-surface)),
              0 0 0 2px rgb(var(--inverse-on-surface));
  outline-offset: 5px;
}



/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!! À PROPOS DU SHINYDEX !!!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/

.app-icon {
  display: flex;
  width: 120px;
  height: 120px;
  min-height: 120px;
  border-radius: 50%;
  overflow: hidden;
  margin: 0 auto;
  border: 1px solid rgb(var(--outline-variant));
}

.app-icon > svg {
  width: 120px;
  height: 120px;
  --background-top: rgb(var(--primary-50));
}

.lien-source {
  color: var(--accent-color);
}

.lien-source .material-icons {
  vertical-align: middle;
  margin-right: 4px;
}



/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!! SPRITE VIEWER, FILTER MENU & OBFUSCATOR !!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/

#sprite-viewer,
#filter-menu,
#top-layer,
#obfuscator {
  grid-column: 1 / -1;
  grid-row: 1 / -1;
}

#sprite-viewer {
  z-index: var(--z-sprite-viewer);
}

#obfuscator {
  z-index: var(--z-obfuscator);
}

#top-layer,
#filter-menu {
  background-color: transparent;
  z-index: var(--z-obfuscator);
}

body[data-section-actuelle~="top-layer"] #top-layer {
  display: contents;
}

#top-layer > * {
  z-index: var(--z-top-layer);
}

@media (max-width: 719px) {
  #top-layer > .mobile-centered {
    max-width: calc(100vw - 16px) !important;
    max-height: calc(100vh - 16px) !important;
    min-width: unset !important;
    margin: 8px;
    top: 50vh !important;
    left: 50vw !important;
    transform: translate(-50%, -50%);
  }
}



/*
 * Notification
 */

.notification-container {
  width: 100%;
  height: auto;
  max-height: calc(50vh - var(--bottom-bar-height));
  overflow-y: auto;
  position: fixed;
  z-index: var(--z-notification);
  top: calc(100% - var(--bottom-bar-height));
  transform: translateY(calc(-1px * var(--notification-container-height, 0)));
  transition: transform .3s var(--easing-standard);
}

.notification-container.no-animation {
  transition: none;
}

.notification-container > .snackbar:first-child {
  margin-top: 0;
}


/*
 * Bouton installer
 */

[data-action="install-app"] {
  /*position: absolute;
  bottom: calc(0.5*(56px - 30px));
  right: 20px;*/
  display: none;
}

